--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -256,7 +256,7 @@
                 style="@style/buttons_text_size_footer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="8"
+                android:layout_weight="2"
                 android:background="@drawable/rounded"
                 android:text="0"
                 app:backgroundTint="@color/gray1"/>
@@ -272,7 +272,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/linearLayout"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+            android:paddingEnd="4dp">
 
             <Button
                 android:id="@+id/_comma"
@@ -281,8 +282,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:background="@drawable/rounded"
-                android:text=","
-                app:backgroundTint="@color/gray1"/>
+                android:text="."
+                app:backgroundTint="@color/gray1" />
 
             <Button
                 android:id="@+id/_eq"
