--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -16,7 +16,7 @@
         android:text="Name"
         android:textAlignment="textEnd"
         android:textColor="@color/white"
-        android:textSize="65sp"
+        android:textSize="55sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +38,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="("
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_bracket_close"
@@ -48,7 +48,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text=")"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_mc"
@@ -58,7 +58,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="mc"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_m_plus"
@@ -68,7 +68,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="m+"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_m_minus"
@@ -78,7 +78,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="m-"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_mr"
@@ -88,7 +88,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="mr"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_ac"
@@ -134,6 +134,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="÷"
+            android:textSize="18sp"
             app:backgroundTint="@color/orange" />
 
     </LinearLayout>
@@ -155,7 +156,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="2nd"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_x2"
@@ -165,7 +166,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="x²"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_x3"
@@ -175,7 +176,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="x³"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_xy"
@@ -185,7 +186,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="xʸ"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_ex"
@@ -195,7 +196,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="ₑˣ"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_10x"
@@ -205,7 +206,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="10ˣ"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_7"
@@ -215,6 +216,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="7"
+            android:textSize="18sp"
             app:backgroundTint="@color/gray1" />
 
         <Button
@@ -225,6 +227,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="8"
+            android:textSize="18sp"
             app:backgroundTint="@color/gray1" />
 
         <Button
@@ -235,6 +238,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="9"
+            android:textSize="18sp"
             app:backgroundTint="@color/gray1" />
 
         <Button
@@ -267,7 +271,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="1/x"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_2sqrtx"
@@ -277,7 +281,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="√x"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_3sqrtx"
@@ -287,7 +291,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="∛x"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_ysqrtx"
@@ -297,7 +301,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="ʸ√x"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_ln"
@@ -307,7 +311,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="ln"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_log10"
@@ -317,7 +321,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="log₁₀"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_4"
@@ -327,6 +331,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="4"
+            android:textSize="18sp"
             app:backgroundTint="@color/gray1" />
 
         <Button
@@ -337,6 +342,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="5"
+            android:textSize="18sp"
             app:backgroundTint="@color/gray1" />
 
         <Button
@@ -347,6 +353,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="6"
+            android:textSize="18sp"
             app:backgroundTint="@color/gray1" />
 
         <Button
@@ -357,6 +364,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="-"
+            android:textSize="18sp"
             app:backgroundTint="@color/orange" />
 
     </LinearLayout>
@@ -378,7 +386,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="x!"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_sin"
@@ -388,7 +396,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="sin"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_cos"
@@ -398,7 +406,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="cos"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_tan"
@@ -408,7 +416,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="tan"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_e"
@@ -418,7 +426,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="e"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_ee"
@@ -428,7 +436,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="ee"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_1"
@@ -438,6 +446,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="1"
+            android:textSize="18sp"
             app:backgroundTint="@color/gray1" />
 
         <Button
@@ -448,6 +457,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="2"
+            android:textSize="18sp"
             app:backgroundTint="@color/gray1" />
 
         <Button
@@ -458,6 +468,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="3"
+            android:textSize="18sp"
             app:backgroundTint="@color/gray1" />
 
         <Button
@@ -468,6 +479,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="+"
+            android:textSize="18sp"
             app:backgroundTint="@color/orange" />
 
     </LinearLayout>
@@ -489,7 +501,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="rad"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_sinh"
@@ -499,7 +511,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="sinh"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_cosh"
@@ -509,7 +521,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="cosh"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_tanh"
@@ -519,7 +531,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="tanh"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_pi"
@@ -529,7 +541,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="π"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
         <Button
             android:id="@+id/_rand"
@@ -539,7 +551,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="rand"
-            app:backgroundTint="@color/gray1" />
+            app:backgroundTint="@color/gray_other" />
 
 
         <Button
@@ -547,9 +559,11 @@
             style="@style/buttons_text_size_footer_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="0"
+            android:textSize="18sp"
+            android:paddingEnd="65dp"
+            android:paddingStart="65dp"
             app:backgroundTint="@color/gray1" />
 
 
@@ -561,6 +575,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="."
+            android:textSize="18sp"
             app:backgroundTint="@color/gray1" />
 
         <Button
@@ -571,6 +586,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="="
+            android:textSize="18sp"
             app:backgroundTint="@color/orange" />
 
     </LinearLayout>
