--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="1000dp"/>
-            <size android:height="50dp"/>
+            <corners android:radius="@dimen/_600sdp"/>
+            <size android:height="@dimen/_30sdp"/>
         </shape>
     </item>
 
