--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -16,7 +16,8 @@
         android:text="Name"
         android:textAlignment="textEnd"
         android:textColor="@color/white"
-        android:textSize="55sp"
+        android:textSize="@dimen/_39sdp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -99,7 +100,6 @@
             android:background="@drawable/rounded"
             android:text="AC"
             android:textColor="@color/black"
-            android:textSize="18sp"
             app:backgroundTint="@color/gray2" />
 
         <Button
@@ -111,7 +111,6 @@
             android:background="@drawable/rounded"
             android:text="+/-"
             android:textColor="@color/black"
-            android:textSize="18sp"
             app:backgroundTint="@color/gray2" />
 
         <Button
@@ -123,7 +122,6 @@
             android:background="@drawable/rounded"
             android:text="%"
             android:textColor="@color/black"
-            android:textSize="22sp"
             app:backgroundTint="@color/gray2" />
 
         <Button
@@ -134,7 +132,6 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="÷"
-            android:textSize="18sp"
             app:backgroundTint="@color/orange" />
 
     </LinearLayout>
@@ -196,6 +193,7 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="ₑˣ"
+            android:textSize="16sp"
             app:backgroundTint="@color/gray_other" />
 
         <Button
@@ -249,7 +247,6 @@
             android:layout_weight="2"
             android:background="@drawable/rounded"
             android:text="x"
-            android:textSize="22sp"
             app:backgroundTint="@color/orange" />
 
     </LinearLayout>
