--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -228,7 +228,7 @@
         android:textColorHighlight="@color/black"
 
         android:textColorLink="@color/black"
-        android:textSize="55sp"
+        android:textSize="@dimen/_39sdp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
         app:layout_constraintEnd_toEndOf="parent" />
 
