--- a/app/src/main/res/values/style_hor.xml
+++ b/app/src/main/res/values/style_hor.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="buttons_text_size_horizontal">
-        <item name="android:textSize">10sp</item>
-        <item name="android:layout_marginStart">4dp</item>
-        <item name="android:layout_marginEnd">4dp</item>
-        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:textSize">@dimen/_6sdp</item>
+        <item name="android:layout_marginStart">@dimen/_4sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_4sdp</item>
+        <item name="android:layout_marginBottom">@dimen/_4sdp</item>
     </style>
 </resources>
